--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,5 +15,15 @@ spring:
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     open-in-view: false
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect # 解决Springboot2.0中Hibernate默认创建的mysq表为myisam引擎问题
+  mail:
+    protocol: smtp
+    host: smtp.qq.com #邮箱服务器地址
+    username: 1393679194@qq.com #用户名
+    password: vfthryvbbyanjdac
+    default-encoding: UTF-8
+    fromMail:
+      addr: 1393679194@qq.com #以谁来发送邮件
+
+
 
 
