add pom and yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,5 +15,9 @@ spring:
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     open-in-view: false
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect # 解决Springboot2.0中Hibernate默认创建的mysq表为myisam引擎问题
-
+  rabbitmq:
+    host: 127.0.0.1
+    port: 15672
+    username: test
+    password: 123456
 
