--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,11 @@
 server:
   port: 8080
 
+dubbo:
+  protocol:
+    port: 12819
+
+common:
+  zk:
+    address: 140.143.242.205:12181
+  group: spring-boot-common
