--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.forest10</groupId>
+            <artifactId>forest10-tool</artifactId>
+            <version>1.0.9-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
