--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.forest10/forest10-tool -->
+        <dependency>
+            <groupId>com.forest10</groupId>
+            <artifactId>forest10-tool</artifactId>
+            <version>1.0.9</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -63,11 +70,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.forest10</groupId>
-            <artifactId>forest10-tool</artifactId>
-            <version>1.0.9-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
