--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,17 @@
             <version>2.9.5</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.netflix.feign</groupId>
+            <artifactId>feign-core</artifactId>
+            <version>8.18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.netflix.feign</groupId>
+            <artifactId>feign-jackson</artifactId>
+            <version>8.18.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
