--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
             <version>4.2</version>
         </dependency>
         <!-- apache -->
+        <!-- https://mvnrepository.com/artifact/com.xuxueli/xxl-job-core -->
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.0.0</version>
+        </dependency>
 
     </dependencies>
 
