--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,28 +1,26 @@
 server:
   port: 8080
 spring:
-  datasource:
-    username: blfip
-    password: d&IB@S&aW%w%i58S
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://140.143.242.205:13136/bilibili_test?useUnicode=true&zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&autoReconnect=true&useSSL=false
-  jpa:
-    show-sql: true
-    generate-ddl: true
-    hibernate:
-      ddl-auto: update
-    properties:
-      dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-    open-in-view: false
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect # 解决Springboot2.0中Hibernate默认创建的mysq表为myisam引擎问题
   mail:
     protocol: smtp
     host: smtp.qq.com #邮箱服务器地址
     username: 1393679194@qq.com #用户名
-    password: vfthryvbbyanjdac
+    password: ENC(C5WXELlywY9+dzdZy4XOfBqESlxrkEEk0HfHyspHsFk=)
     default-encoding: UTF-8
     fromMail:
       addr: 1393679194@qq.com #以谁来发送邮件
+    port: 465
+    properties:
+      mail:
+        smtp:
+          ssl:
+            enable: true
+          auth: true
+          starttls:
+            enable: true
+jasypt:
+  encryptor:
+    password: ${JASYPT_ENCRYPTOR_PASSWORD:}
 
 
 
