--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,11 @@
       <version>4.2</version>
     </dependency>
     <!-- apache -->
-
+    <dependency>
+      <groupId>com.github.ulisesbocchio</groupId>
+      <artifactId>jasypt-spring-boot-starter</artifactId>
+      <version>2.1.0</version>
+    </dependency>
   </dependencies>
 
   <build>
