--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
       <artifactId>jasypt-spring-boot-starter</artifactId>
       <version>2.1.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.56</version>
+    </dependency>
+
   </dependencies>
 
   <build>
