加入application属性加密组件  --jasypt.encryptor.password=XXXX

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,11 @@ server:
 
 core:
   cpu: Xeno
-
+spring:
+  mvc:
+    static-path-pattern: /**
+  profiles:
+    active: @profiles.active@
 
 jasypt:
   encryptor:
