--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>com.forest10</groupId>
   <artifactId>spring-boot-family</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <name>spring-boot-family</name>
   <description>Spring Boot</description>
@@ -21,10 +21,10 @@
   </parent>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
     <boot-parent.version>2.0.0.RELEASE</boot-parent.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
 
   <dependencies>
@@ -83,10 +83,63 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.56</version>
     </dependency>
+    <!--第三方-->
+    <!--log-->
+    <!--log if-->
+    <dependency>
+      <groupId>org.codehaus.janino</groupId>
+      <artifactId>janino</artifactId>
+    </dependency>
+    <!--log if-->
 
+    <!--log-->
   </dependencies>
-
+  <profiles>
+    <profile>
+      <!-- 本地开发环境 -->
+      <id>dev</id>
+      <properties>
+        <profiles.active>dev</profiles.active>
+      </properties>
+    </profile>
+    <profile>
+      <!-- 测试环境 -->
+      <id>beta</id>
+      <properties>
+        <profiles.active>beta</profiles.active>
+      </properties>
+    </profile>
+    <profile>
+      <!-- 发布环境 -->
+      <id>prod</id>
+      <properties>
+        <profiles.active>prod</profiles.active>
+      </properties>
+    </profile>
+  </profiles>
   <build>
+    <finalName>spring-boot-jasypt</finalName>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <excludes>
+          <exclude>application-dev.yml</exclude>
+          <exclude>application-beta.yml</exclude>
+          <exclude>application-prod.yml</exclude>
+        </excludes>
+        <includes>
+          <include>**/*</include>
+        </includes>
+        <filtering>true</filtering>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>application-${profiles.active}.yml</include>
+        </includes>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
@@ -94,15 +147,24 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.3</version>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>2.6</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>     <!--指定编译JDK为1.8 支持钻石符号-->
+          <encoding>utf-8</encoding>
+          <delimiters>
+            <delimiter>@</delimiter>
+          </delimiters>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <skipTests>true</skipTests>
+        </configuration>
       </plugin>
     </plugins>
   </build>
-
 
 </project>
