--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>objenesis</artifactId>
+          <groupId>org.objenesis</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <!-- apache -->
     <dependency>
@@ -93,6 +99,12 @@
     <!--log if-->
 
     <!--log-->
+    <dependency>
+      <groupId>org.redisson</groupId>
+      <artifactId>redisson-spring-boot-starter</artifactId>
+      <version>3.10.3</version>
+    </dependency>
+
   </dependencies>
   <profiles>
     <profile>
