--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <mybatis-spring.version>1.3.2</mybatis-spring.version>
     <boot-parent.version>2.0.0.RELEASE</boot-parent.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <mysql-connector-java.version>8.0.15</mysql-connector-java.version>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <druid-spring-boot-starter.version>1.1.14</druid-spring-boot-starter.version>
   </properties>
@@ -112,6 +113,13 @@
 
 
     <!--数据库-->
+
+    <!--mysql driver -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${mysql-connector-java.version}</version>
+    </dependency>
     <!--第三方连接池-->
     <dependency>
       <groupId>com.alibaba</groupId>
