--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   profiles:
     active: @profiles.active@
   application:
-    name: @parent.artifactId@-@profiles.active@
+    name: @artifactId@-@profiles.active@
   datasource:
     druid:
       initial-size: 1
