--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,10 @@ core:
   cpu: Xeno
 
 
+
+
+
+jasypt:
+  encryptor:
+    password: ${JASYPT_ENCRYPTOR_PASSWORD:}
+###  --jasypt.encryptor.password=XXXX
