--- a/pom.xml
+++ b/pom.xml
@@ -71,12 +71,19 @@
             <artifactId>commons-collections4</artifactId>
             <version>4.2</version>
         </dependency>
+        <dependency>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <version>2.1.0</version>
+        </dependency>
         <!-- apache -->
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-amqp -->
         <dependency>
-            <artifactId>spring-boot-starter-amqp</artifactId>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>2.1.5.RELEASE</version>
         </dependency>
+
 
     </dependencies>
 
