--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,17 @@
             <groupId>com.github.ulisesbocchio</groupId>
             <version>2.1.0</version>
         </dependency>
+
+        <dependency>
+            <artifactId>springfox-swagger2</artifactId>
+            <groupId>io.springfox</groupId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <groupId>io.springfox</groupId>
+            <version>2.9.2</version>
+        </dependency>
     </dependencies>
 
     <build>
